--- a/docs/fides/docs/css/fides.css
+++ b/docs/fides/docs/css/fides.css
@@ -2,6 +2,9 @@ body {
   font-family: 'Source Sans Pro', sans-serif !important;
 }
 
+td {
+  font-size: 16px;
+}
 .md-header {
   background-color: #0861ce;
 }
