--- a/docs/fides/docs/css/fides.css
+++ b/docs/fides/docs/css/fides.css
@@ -1,74 +1,82 @@
+/* -- START: Default mode CSS -- */
+[data-md-color-scheme="default"] { 
+  --md-typeset-color: rgb(79, 86, 107);
+  --md-default-fg-color--light: rgb(79, 86, 107);
+  --md-primary-fg-color: #0861CE;
+  --md-vis-bg-color: rgba(0, 0, 0, 0.02);
+  --md-code-bg-color: #0861ce27;
+  --md-code-fg-color: #0657b9;
+  --md-accent-fg-color: #1FDF8F;
+  --md-nav-border: #ccc;
+  --md-default-fg-color--lightest: rgb(137, 140, 147);
+  --md-code-hl-comment-color: rgb(193, 201, 210);
+  --md-code-hl-string-color:rgb(133, 217, 150);
+  --md-code-hl-keyword-color: rgb(245, 251, 255);
+  --md-code-hl-punctuation-color: rgb(245, 251, 255);
+  --md-bg-footer-color: #0861CE;
+  --md-bg-table-header: rgba(79, 86, 107, 0.05);
+  --svg-highlight-col: #0657b9;
+} 
+
+
+/* -- START: Slate/Dark mode CSS -- */
+
+[data-md-color-scheme="slate"] { 
+  --md-typeset-color: rgb(247, 250, 252);
+  --md-default-fg-color--light: rgb(247, 250, 252);
+  --md-default-bg-color: #2A2F45;
+  --md-primary-fg-color: #1A1D2E;
+  --md-accent-fg-color: #1FDF8F;
+  --md-typeset-a-color: rgb(3, 97, 206);
+  --md-vis-bg-color: rgba(0, 0, 0, 0.12);
+  --md-nav-border: #61647b;
+  --md-default-fg-color--lightest: rgb(191, 191, 191);
+  --md-code-bg-color: #1a1d2ea7;
+  --md-code-fg-color: #a3abd8;
+  --md-bg-footer-color: #1A1D2E;
+  --md-bg-table-header: rgba(233, 235, 252, 0.06);
+  --svg-highlight-col: #1FDF8F;
+} 
+
+
 body {
   font-family: 'Source Sans Pro', sans-serif !important;
 }
 
-td {
-  font-size: 16px;
-}
-.md-header {
-  background-color: #0861ce;
+.md-header .md-logo img {
+  width: 60px;
+  height: auto;
 }
 
-.md-header .md-logo img {
-  width: 100px;
-  height: auto;
+.md-header__title {
+  margin-left: 0;
+}
+
+.md-main__inner {
+  margin-top: 0;
+}
+
+.md-sidebar {
+  padding-top: 0;
+}
+.md-sidebar__inner {
+  padding-top: 3.2em;
+  padding-bottom: 3.2em;
+}
+.md-sidebar__scrollwrap {
+  border-right: solid 1px var(--md-nav-border) !important;
 }
 
 .md-content h1,
 .md-content h2 {
   font-weight: 600;
-  color: #111439;
 }
 
 .md-footer {
-  background-color: #303036;
   padding: 30px 50px;
   color: white;
 }
 
-.md-header__topic {
-  display: none;
-}
-
-.md-sidebar.md-sidebar--secondary {
-  visibility: hidden;
-}
-
-.md-button.md-button--secondary.md-button-github {
-  padding-left: 60px;
-  background: url('../img/sprites.png') no-repeat 5px 4px;
-  background-size: 35px;
-  transition: all 0.5s ease;
-}
-.md-button.md-button--secondary.md-button-github:hover {
-  padding-left: 60px;
-  background: rgb(64, 81, 181) url('../img/sprites.png') no-repeat 5px -45px;
-  background-size: 35px
-}
-.md-button.md-button--secondary.md-button-slack {
-  padding-left: 60px;
-  background: url('../img/sprites.png') no-repeat 5px -93px;
-  background-size: 35px;
-  transition: all 0.5s ease;
-}
-.md-button.md-button--secondary.md-button-slack:hover {
-  padding-left: 60px;
-  background: rgb(64, 81, 181) url('../img/sprites.png') no-repeat 5px -141px;
-  background-size: 35px
-
-}
-.md-button.md-button--secondary.md-button-discord {
-  padding-left: 60px;
-  background: url('../img/sprites.png') no-repeat 5px -185px;
-  background-size: 35px;
-  transition: all 0.5s ease;
-}
-.md-button.md-button--secondary.md-button-discord:hover {
-  padding-left: 60px;
-  background: rgb(64, 81, 181) url('../img/sprites.png') no-repeat 5px -225px;
-  background-size: 35px
-
-}
 
 .md-typeset__table{
   display: block;
@@ -77,6 +85,73 @@ td {
 .md-typeset table:not([class]){
   display: table;
 }
+.md-typeset code {
+  font-size: 0.65rem;
+  padding: 2px 4px;
+  border-radius: 4px;
+
+}
+
+.md-typeset .custom-license  code {
+  color: #fff !important;
+}
+
+p code, li code {
+  color: var(--md-code-fg-color);
+}
+
+
+.md-footer {
+  background-color: var(--md-bg-footer-color);
+}
+
+.md-footer-meta {
+  display:  none
+}
+
+.md-typeset__table thead {
+  background-color: var(--md-bg-table-header);
+}
+
+.svg-illustration #path-lines rect, .svg-illustration #path-lines polyline{
+  stroke: var(--svg-highlight-col);
+  fill:none;
+}
+
+.svg-illustration #path-lines polygon {
+  fill: var(--svg-highlight-col);
+}
+.svg-illustration #text {
+  fill: var(--md-typeset-color);
+}
+
+/* -- Code Snippet Windows -- */
+
+
+.highlighttable .linenos, .highlighttable .code, .highlighttable .code, .md-typeset .highlighttable code {
+  background-color: rgb(26, 29, 46);
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+.highlighttable .linenos {
+  border-radius: 5px 0 0 5px;
+}
+
+.highlighttable .code {
+  border-radius: 0 5px 5px 0;
+}
+
+.highlighttable .linenodiv pre {
+  color: rgb(105, 115, 134);
+  
+}
+.highlighttable .linenodiv {
+  box-shadow: none;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+
 
 
 /* -- START: Taxonomy Visualization Explorer CSS -- */
@@ -277,9 +352,3 @@ td {
 }
 
 /* -- END: Taxonomy Visualization Explorer CSS -- */
-
-/* -- Custom dark theme (partially overrides mkdocs' "slate" theme) -- */
-[data-md-color-scheme="slate"] .md-content h1,
-[data-md-color-scheme="slate"] .md-content h2 {
-  color: white;
-}
