--- a/docs/fides/docs/css/swagger_override.css
+++ b/docs/fides/docs/css/swagger_override.css
@@ -7,7 +7,11 @@
   font-family: 'Source Sans Pro', sans-serif !important;
 
 }
-.models, [data-tag="Visualize"], [href="openapi.json"], .response-col_links, .response-controls, .tab, select{
+.models, .try-out__btn, [data-tag="Visualize"], 
+#operations-Visualize-get_visualization_data_category_visualize__figure_type__get, 
+#operations-Visualize-get_visualization_data_use_visualize__figure_type__get,
+#operations-Visualize-get_visualization_data_qualifier_visualize__figure_type__get,
+[href="openapi.json"], .response-col_links, .response-controls, .tab, select{
   display:  none !important;
   padding:  0px !important;
   margin:  0px !important;
