--- a/docs/fides/docs/css/api.css
+++ b/docs/fides/docs/css/api.css
@@ -1,65 +1,50 @@
+/* -- Swagger UI edits -- */
 
-/* -- Swagger UI redesign -- */
 
-.renderedMarkdown p {
-  margin:  0px !important;
-  font-size:  16px !important;
-  font-family: 'Source Sans Pro', sans-serif !important;
+/* Hide the "Schemas" (models) section and the "Links" column in the responses */
 
-}
-.models, [data-tag="Visualize"], [href="openapi.json"], .response-col_links, .response-controls, .tab, select{
-  display:  none !important;
-  padding:  0px !important;
-  margin:  0px !important;
+#swagger-ui .swagger-ui section.models,
+#swagger-ui .swagger-ui td.response-col_links {
+    display: none;
+    padding: 0px;
+    margin: 0px;
 }
 
-tbody .response-col_status {
-  font-size: 16px !important;
-  font-weight:  bold !important;
+
+/* Increase the font-size for some elements, for clarity */
+
+#swagger-ui .swagger-ui .col_header {
+    font-size: 16px;
+    font-weight: bold;
 }
 
-.col_header {
-  font-size: 16px !important;
-  font-weight:  bold !important;
+#swagger-ui .swagger-ui .opblock .opblock-summary-description {
+    font-size: 16px;
 }
 
-.response-col_description p {
-  margin: 0px !important;
-}
-.opblock-summary-description {
-  font-size: 16px !important;
+
+/* Tighten margins & padding for some elements */
+
+#swagger-ui .swagger-ui .model-example {
+    margin: 0px;
 }
 
-.model-example{
-  margin:  0px !important;
+#swagger-ui .swagger-ui .tab,
+#swagger-ui .swagger-ui .tabitem {
+    margin: 4px;
 }
 
-.tab {
-  margin:  4px !important;
+#swagger-ui .swagger-ui .info {
+    margin: 12px 12px 12px 0px;
 }
 
-.tabitem {
-  margin:  4px !important;
-  font-size:  14px !important;
+#swagger-ui .swagger-ui .opblock-tag {
+    padding: 12px 0px 12px 0px;
 }
 
-/* Get rid of the harsh lime green */
-[style="color: rgb(162, 252, 162);"] {
-  color: inherit !important;
-}
 
-.microlight {
-  padding: 1px !important;
-}
+/* Remove the harsh lime green in code examples */
 
-.info {
-  margin: 12px 12px 12px 0px !important;
-}
-
-.opblock-tag {
-  padding: 12px 0px 12px 0px !important;
-}
-
-span:after {
-  background:  none !important;
+#swagger-ui .swagger-ui code span[style="color: rgb(162, 252, 162);"] {
+    color: inherit !important;
 }
