Separate and tidy CSS

--- a/docs/fides/docs/css/api.css
+++ b/docs/fides/docs/css/api.css
@@ -1,4 +1,4 @@
-/* -- Swagger UI edits -- */
+/* -- START: API Reference CSS -- */
 
 
 /* Hide the "Schemas" (models) section and the "Links" column in the responses */
