--- a/docs/fides/docs/css/fides.css
+++ b/docs/fides/docs/css/fides.css
@@ -4,7 +4,7 @@
   --md-default-fg-color--light: rgb(79, 86, 107);
   --md-primary-fg-color: #0861CE;
   --md-vis-bg-color: rgba(0, 0, 0, 0.02);
-  --md-code-bg-color: #0861ce27;
+  --md-code-bg-color: ghostwhite;/*#0861ce27;*/
   --md-code-fg-color: #0657b9;
   --md-accent-fg-color: #1FDF8F;
   --md-nav-border: #ccc;
