[#587, #607, #608] update config reference and deployment docs (#616)

--- a/docs/fidesops/docs/css/fides.css
+++ b/docs/fidesops/docs/css/fides.css
@@ -377,7 +377,7 @@ form.hs-form{
 
 .highlight .filename > code{
     background-color: transparent;
-    color: #2A2F45 ;
+    color: var(--md-typeset-color);
 }
 
 
